# subtitle-manager

./: .air.toml  .doc-update-stats.json  .env.example  .env.local.template  .gitignore  .golangci.yml  .goreleaser.yml  .mockery.yaml  .mockery.yml  .pre-commit-config.yaml  .prettierignore  .prettierrc  .yaml-lint.yml  AGENTS.md  CHANGELOG.md  DUPLICATE_PR_FIX_SUMMARY.md  Dockerfile  Dockerfile.assets  Dockerfile.fast  Dockerfile.hybrid  Dockerfile.optimized  FRONTEND_ROBUSTNESS_COMPLETE.md  LICENSE  MANUAL_SEARCH_IMPLEMENTATION.md  MERGE_CONFLICT_RESOLUTION_SUMMARY.md  MERGE_CONFLICT_RESOLUTION_SUMMARY_ROUND2.md  Makefile  PEBBLEDB_MIGRATION_SUMMARY.md  POC.md  PROJECT_STATUS.md  PROPOSED_SECURITY_UPDATES.md  README.md  SCORING.md  SECURITY.md  SECURITY_FIXES.md  SECURITY_PERFORMANCE_SUMMARY.md  SESSION_SUMMARY.md  STATUS.md  SYNC_IMPLEMENTATION.md  TEST_ANALYSIS.md  (+41 more)
.devcontainer/: Dockerfile  README.md  devcontainer-simple.json  devcontainer.json  post-create.sh
.github/: AGENTS.md  AUTOMATION_PRECHECKS_DISABLED.md  CLAUDE.md  CODEOWNERS  IMPLEMENTATION_SUMMARY.md  ISSUE_MANAGEMENT_MIGRATION.md  ISSUE_UPDATES_MIGRATION.md  ISSUE_UPDATES_QUICK_START.md  POSTGRES_CI_FIX.md  README.md  WORKFLOW_SETUP_COMPLETE.md  code-style-angular.md  code-style-cpp.md  code-style-csharp.md  code-style-github-actions.md  code-style-go.md  code-style-html-css.md  code-style-javascript.md  code-style-json.md  code-style-markdown.md  code-style-protobuf.md  code-style-python.md  code-style-r.md  code-style-shell.md  code-style-swift.md  codeql.yml  (+25 more)
scripts/copilot-firewall/: .gitignore  README.md  pyproject.toml  requirements.txt  test_fix.py
scripts/copilot-firewall/copilot_firewall/: __init__.py  __main__.py  main.py
(+2821 files in other folders)
